src/test/deca/context/valid/homemade/test/test_valid_egalite_classes1.deca
class A{
    int a;
}

class B{
}

{
    A a = new A();
    A b = new A();
    if (a == b){
        println("(a == b)");
    }
}