src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_invalid_instanceof_field.deca
// test invalide de la règle instance of

class A {
    int x =8;
}

{
    A a = new A();
    println(a.x instanceof A);
}